--- a/_layouts/pure.html
+++ b/_layouts/pure.html
@@ -12,7 +12,7 @@
         <div class="footer">
             <div class="wrap">
                 <p>Ankit 是一個幫助記憶知識的工具。</p>
-                <p>Source Code: <a href="">Github</a></p>
+                <p>Source Code: <a href="https://github.com/mic0x1/ankit">Github</a></p>
                 <p>Copyright © 2022 <a href="https://github.com/mic0x1/">mic0x1</a> all right reserved.</p>
             </div>
         </div>
