update pure.html and 001.json

--- a/_layouts/pure.html
+++ b/_layouts/pure.html
@@ -12,8 +12,9 @@
         <div class="footer">
             <div class="wrap">
                 <p>Ankit 是一個幫助記憶知識的工具。</p>
+                <p>最後更新時間：{{ site.time | date: '%Y/%m/%d %H:%M:%S' }}；<a href="">刷新本頁</a></p>
                 <p>Source Code: <a href="https://github.com/mic0x1/ankit">Github</a></p>
-                <p>Copyright © 2022 <a href="https://github.com/mic0x1/">mic0x1</a> all right reserved.</p>
+                <p>Copyright © 2022 <a href="https://github.com/mic0x1/">mic0x1</a> 保留一切權利。</p>
             </div>
         </div>
     </body>
